@@ -15,8 +15,9 @@ public class DataGenerators {
         if (event.includeServer()) {
             generator.addProvider(new Recipes(generator));
             generator.addProvider(new LootTables(generator));
-            generator.addProvider(new ItemTags(generator, event.getExistingFileHelper()));
-            generator.addProvider(new BlockTags(generator, event.getExistingFileHelper()));
+            BlockTags blockTags = new BlockTags(generator, event.getExistingFileHelper());
+            generator.addProvider(blockTags);
+            generator.addProvider(new ItemTags(generator, blockTags, event.getExistingFileHelper()));
         }
     }
 }
