@@ -38,7 +38,7 @@ public class MachineInfuserTileEntity extends TickingTileEntity {
     public static final int SLOT_MACHINEOUTPUT = 1;
 
     public static final Lazy<ContainerFactory> CONTAINER_FACTORY = Lazy.of(() -> new ContainerFactory(2)
-            .slot(specific(VariousModule.DIMENSIONALSHARD.get()).in(), SLOT_SHARDINPUT, 64, 24)
+            .slot(specific(MachineInfuserTileEntity::isShard).in(), SLOT_SHARDINPUT, 64, 24)
             .slot(specific(MachineInfuserTileEntity::isInfusable).in().out(), SLOT_MACHINEOUTPUT, 118, 24)
             .playerSlots(10, 70));
 
@@ -48,7 +48,7 @@ public class MachineInfuserTileEntity extends TickingTileEntity {
                 if (slot == SLOT_MACHINEOUTPUT) {
                     return isInfusable(stack);
                 } else {
-                    return stack.getItem() == VariousModule.DIMENSIONALSHARD.get();
+                    return isShard(stack);
                 }
             })
             .build();
@@ -94,10 +94,14 @@ public class MachineInfuserTileEntity extends TickingTileEntity {
         } else {
             ItemStack inputStack = items.getStackInSlot(0);
             ItemStack outputStack = items.getStackInSlot(1);
-            if (!inputStack.isEmpty() && inputStack.getItem() == VariousModule.DIMENSIONALSHARD.get() && isInfusable(outputStack)) {
+            if (isShard(inputStack) && isInfusable(outputStack)) {
                 startInfusing();
             }
         }
+    }
+
+    private static boolean isShard(ItemStack stack) {
+        return VariousModule.SHARDS_TAG.contains(stack.getItem());
     }
 
     private static boolean isInfusable(ItemStack stack) {
