@@ -1,6 +1,7 @@
 Upcoming:
 - Added dimensional shards to the forge:dusts tag
 - Fixed the machine infuser so that automation will put shards and machines in the right slots
+- Added dimensional shards to the new rftoolsbase:shards tag so that other mods can also add dimensional shards
 
 1.16-2.1.3:
 - Fixed a crash with the gui of the filter
